# atlas-low_level_programming

./: .gitignore  CMakeLists.txt  README.md  TestRunScript.bash  TextAdventureGame  URNidiot  a.out  putchair  putchair.c  testScript  testScript.c  textAdventureGame.c
!template_project_dir/: README.md  main.c  main.h
argc_argv/: 0-whatsmyname.c  1-args.c  100-change.c  2-args.c  3-mul.c  4-add.c  README.md  a.out  main.h
bit_manipulation/: 0-binary_to_uint.c  1-print_binary.c  2-get_bit.c  3-set_bit.c  4-clear_bit.c  5-flip_bits.c  README.md  main.c  main.h  test
doubly_linked_lists/: 0-print_dlistint.c  1-dlistint_len.c  2-add_dnodeint.c  3-add_dnodeint_end.c  4-free_dlistint.c  5-get_dnodeint.c  6-sum_dlistint.c  7-insert_dnodeint.c  8-delete_dnodeint.c  README.md  lists.h  main.c  test  testRun
file_io/: 0-main.c  0-read_textfile.c  0-read_textfile_0  1-create_file.c  2-append_text_to_file.c  3-cp.c  README.md  main.h  textfile_0
function_pointers/: 0-print_name.c  1-array_iterator.c  2-int_index.c  3-Calc-ReadMe.md  3-calc.h  3-get_op_func.c  3-main.c  3-op_functions.c  README.md  calc  function_pointers.h  main.c  main.h
functions_nested_loops/: .0-putchar.c.swp  .0.swp  .test.swp  0-putchar.c  1-alphabet.c  10-add.c  11-print_to_98.c  2-print_alphabet_x10.c  3-islower.c  4-isalpha.c  5-sign.c  6-abs.c  7-print_last_digit.c  8-24_hours.c  9-times_table.c  README.md  a.out  main.c  main.h  main.h.gch  test  test123.c
hash_tables/: 0-hash_table_create.c  1-djb2.c  2-key_index.c  200-hashtag_table.c  201-tic-tac-toe.c  3-hash_table_set.c  README.md  main.c  (+5 more)
(+215 files in other folders)
